<resources>
    <string name="app_name">Clasificación de sistemas de telecomunicaciones</string>
    <string name="app_name_modulacion">Modulación Analógica</string>
    <string name="btn_init_test">Iniciar Evaluación</string>
    <string name="txt_clasificaciones">Clasificaciones</string>
    <string name="txt_modo_transmision">Modo de transmisión</string>
    <string name="txt_formato">Formato</string>
    <string name="txt_tipo_flujo">Tipo de flujo</string>
    <string name="txt_tam">Tamaño</string>
    <string name="txt_medio_transmision">Medio de transmisión</string>
    <string name="txt_modo_transmision_simplex_def">O unidireccional, es aquella que ocurre en una dirección solamente.</string>
    <string name="txt_modo_transmision_half_suplex_def">Permite transmitir en ambas direcciones; sin embargo la transmisión puede ocurrir solamente en una dirección a la vez.</string>
    <string name="txt_modo_transmision_full_duplex_def">Permite transmitir en ambas direcciones, pero simultáneamente por el mismo canal.</string>
    <string name="txt_modo_transmision_simplex">Simplex</string>
    <string name="txt_modo_transmision_half_suplex">Half Duplex</string>
    <string name="txt_modo_transmision_full_duplex">Full Duplex</string>
    <string name="tipos_de_modos">tipos de modos</string>
    <string name="txt_formato_transmision_serie">Serie</string>
    <string name="txt_formato_transmision_paralelo">Paralelo</string>
    <string name="txt_formato_transmision_serie_def">La información es transmitida por un solo canal de transmisión.</string>
    <string name="txt_formato_transmision_paralelo_def">La información es transmitida por n canales de transmisión.</string>
    <string name="txt_tipo_de_flujo_point_to_point">Point to point link</string>
    <string name="txt_tipo_de_flujo_point_to_multipoint">Point to multipoint</string>
    <string name="txt_tipo_de_flujo_point_to_direct_link">Direct Link</string>
    <string name="txt_tipo_de_flujo_multi_to_multi">Multipoint to multipoint</string>
    <string name="txt_tipo_de_flujo">Tipos de flujo</string>
    <string name="txt_topologia">Topología</string>
    <string name="txt_topologia_bus">Bus</string>
    <string name="txt_topologia_estrella">Estrella</string>
    <string name="txt_topologia_anillo">Anillo</string>
    <string name="txt_topologia_arbol">Árbol</string>
    <string name="txt_topologia_doble_anillo">Doble Anillo</string>
    <string name="txt_topologia_malla">Malla</string>
    <string name="txt_topologia_mixta">Mixta</string>
    <string name="txt_medio_transmision_medio_guiado">Medios guiados</string>
    <string name="txt_medio_transmision_medio_guiado_fibra_optica">Fibra óptica</string>
    <string name="txt_medio_transmision_medio_guiado_coaxial">Coaxial</string>
    <string name="txt_medio_transmision_medio_guiado_stp">STP (shielded Twisted-pair)</string>
    <string name="txt_medio_transmision_medio_guiado_utp">UTP (Unshielded Twisted pair)</string>
    <string name="txt_medio_transmision_medio_guiado_ftp">FTP (Foil twisted pair)</string>
    <string name="txt_medio_transmision_medio_no_guiados">Medios no guiados</string>
    <string name="txt_medio_transmision_medio_no_guiados_agua">Agua</string>
    <string name="txt_medio_transmision_medio_no_guiados_aire">Aire</string>
    <string name="txt_medio_transmision_medio_no_guiados_espacio_libre">Espacio Libre</string>
    <string name="txt_medio_transmision_tipo_red_tamanio">Tamaño</string>
    <string name="txt_medio_transmision_tipo_red_san">Storage Area Network (SAN): es una tecnología muy usada por grandes empresas para obtener mayor flexibilidad en la obtención y manipulación de los datos que necesita para su desenvolvimiento.</string>
    <string name="txt_medio_transmision_tipo_red_pan">uPersonal Area Network (PAN): es una red integrada por todos los dispositivos en el entorno local y cercano de su usuario, es decir que la componen todos los aparatos que están cerca del mismo</string>
    <string name="txt_medio_transmision_tipo_red_lan">uLocal Area Network (LAN): son el tipo de red más extendido, utilizándose primordialmente para el intercambio de datos y recursos entre las computadoras ubicadas en un espacio relativamente pequeño.</string>
    <string name="txt_medio_transmision_tipo_red_man">uMetropolitan Area Network (MAN): es una red de datos diseñada específicamente para ser utilizada en ámbitos de ciudades o pueblos. Las Redes de Área Metropolitana son más grandes que las redes de área local o LAN, pero menores en alcance geográfico que las redes de área amplia (WAN).</string>
    <string name="txt_medio_transmision_tipo_red_wan">uWide Area Network (WAN): es básicamente una o más redes LAN interconectadas entre sí para poder abarcar mucho más territorio, a veces incluso, hasta continentes.</string>
    <string name="txt_enuciado_pregunta_1">En los rangos de frecuencias, LF significa</string>
    <string name="txt_enuciado_pregunta_2">El rango de frecuencias entre 0.3 THz y 3THz está designado a</string>
    <string name="txt_enuciado_pregunta_3">Al modular</string>
    <string name="txt_enuciado_pregunta_4">¿La onda portadora hace parte de la modulación?</string>
    <string name="txt_enuciado_pregunta_5">La ecuación que describe una portadora con modulación de frecuencia es : Z(t) = Vp cos [wi(t)t + ∅]</string>
    <string name="txt_enuciado_pregunta_6">¿Las ondas electromagnéticas necesitan un medio físico para propagarse?</string>
    <string name="txt_enuciado_pregunta_7">En términos de modulación, AM significa</string>
    <string name="txt_enuciado_pregunta_8">¿El rango de frecuencias que va desde 30 Hz hasta los 300 Hz, es llamado frecuencias extremadamente bajas</string>
    <string name="txt_enuciado_pregunta_9">Una ventaja de la modulación de banda lateral única es que, al eliminar una banda lateral, ¿se reduce el ancho de banda por mitad?</string>
    <string name="txt_enuciado_pregunta_10">RF hace referencia a</string>
    <string name="txt_enuciado_pregunta_11">La luz ultravioleta está en el rango de frecuencias de</string>
    <string name="txt_enuciado_pregunta_12">¿La modulación radica en hacer que un parámetro de una señal portadora cambie o varíe?</string>
    <string name="txt_enuciado_pregunta_13">Modificar la amplitud de una de una señal corresponde a</string>
    <string name="txt_enuciado_pregunta_14">PM significa</string>
    <string name="txt_enuciado_pregunta_15">Modificar la frecuencia de una de una señal portadora corresponde a</string>
    <string name="txt_enuciado_pregunta_16">Una ventaja de la banda vestigial única es</string>
    <string name="txt_enuciado_pregunta_17">¿En la Doble Banda Lateral con portadora suprimida la portadora se suprime?</string>
    <string name="txt_enuciado_pregunta_18">FM, significa</string>
    <string name="txt_enuciado_pregunta_19">El teorema de traslación en frecuencia, establece que la multiplicación de una señal f(t) por una señal sinusoidal de frecuencia Wc, traslada su espectro de frecuencia en ± Wc radianes.</string>
    <string name="txt_enuciado_pregunta_20">.(DSB-SC) significa</string>
    <string name="txt_respuesta_verdadera">V</string>
    <string name="txt_resspuesta_falsa">F</string>
    <string name="txt_opcion_tipo_red_man">MAN</string>
    <string name="txt_opcion_tipo_red_wan">WAN</string>
    <string name="txt_opcion_tipo_red_lan">LAN</string>
    <string name="txt_opcion_estrella_1">Un objeto astronómico luminoso</string>
    <string name="txt_opcion_estrella_2">Un tipo de topología de red</string>
    <string name="txt_opcion_estrella_3">Un animal marino</string>
    <string name="txt_opcion_estrella_4">Un tipo de destornillador</string>
    <string name="txt_opcion_numero_canales_1">1</string>
    <string name="txt_opcion_numero_canales_2">n canales</string>
    <string name="txt_opcion_numero_canales_3">4</string>
    <string name="txt_opcion_pregunta_1_a">La fotosíntesis</string>
    <string name="txt_opcion_pregunta_1_b">Bajas frecuencias</string>
    <string name="txt_opcion_pregunta_1_c">Low fase</string>
    <string name="txt_opcion_pregunta_2_a">Rayos gamma</string>
    <string name="txt_opcion_pregunta_2_b">Rayos x</string>
    <string name="txt_opcion_pregunta_2_c">Luz infrarroja</string>
    <string name="txt_opcion_pregunta_3_a">Se evita interferencia y se controlan mejor las señales</string>
    <string name="txt_opcion_pregunta_3_b">Las antenas son más duraderas</string>
    <string name="txt_opcion_pregunta_3_c">Los satélites envían información errónea</string>
    <string name="txt_opcion_pregunta_7_a">Ante Meridiem</string>
    <string name="txt_opcion_pregunta_7_b">Antes del mediodía</string>
    <string name="txt_opcion_pregunta_7_c">Amplitud modulada</string>
    <string name="txt_opcion_pregunta_10_a">Radio frecuencia</string>
    <string name="txt_opcion_pregunta_10_b">Resonancia de fase</string>
    <string name="txt_opcion_pregunta_10_c">Real fina</string>
    <string name="txt_opcion_pregunta_11_a">5nHz a 10nHz</string>
    <string name="txt_opcion_pregunta_11_b">3PHz a 30PHz</string>
    <string name="txt_opcion_pregunta_11_c">10KHz a 20Khz</string>
    <string name="txt_opcion_pregunta_13_a">AM</string>
    <string name="txt_opcion_pregunta_13_b">FM</string>
    <string name="txt_opcion_pregunta_13_c">PM</string>
    <string name="txt_opcion_pregunta_14_a">Fase modulada</string>
    <string name="txt_opcion_pregunta_14_b">Pasado mediodía</string>
    <string name="txt_opcion_pregunta_14_c">Peso mediano</string>
    <string name="txt_opcion_pregunta_15_a">AM</string>
    <string name="txt_opcion_pregunta_15_b">FM</string>
    <string name="txt_opcion_pregunta_15_c">PM</string>
    <string name="txt_opcion_pregunta_16_a">Es peor para transmitir señales</string>
    <string name="txt_opcion_pregunta_16_b">Ocupa menor ancho de banda que la modulación en AM de Doble Banda Lateral DSB-LC</string>
    <string name="txt_opcion_pregunta_16_c">Los vestigios son sobras</string>
    <string name="txt_opcion_pregunta_18_a">Frecuencia modulada</string>
    <string name="txt_opcion_pregunta_18_b">Pasado mediodía</string>
    <string name="txt_opcion_pregunta_18_c">Peso mediano</string>
    <string name="txt_opcion_pregunta_20_a">Doble Banda Lateral con portadora suprimida</string>
    <string name="txt_opcion_pregunta_20_b">Deconstrucción de las bandas suprimidas</string>
    <string name="txt_opcion_pregunta_20_c">Doble banda horizontal con portadora suprimida</string>
    <string name="txt_validar_test">Validar Respuestas</string>
    <string name="txt_realizar_test">Realizar Test</string>
    <string name="txt_tag_respuesta_correcta">Respuesta Correcta</string>
    <string name="txt_modulacion_menu">Técnicas de modulación analógica.</string>
    <string name="txt_modulacion_onda_electromagnetica">Onda electromagnética.</string>
    <string name="txt_modulacion_rangos_frecuencia">Rangos de frecuencia.</string>
    <string name="txt_modulacion_modulacion_analogica">Modulación analógica</string>
    <string name="txt_modulacion_tipos_modulacion_analogica">Tipos modulación analógica</string>
    <string name="txt_onda_elec_menu">Técnicas de modulación analógica.</string>
</resources>