<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivitySistemasTeleco">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_init_test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238"
        android:onClick="empezarTest"/>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="256dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_clasificaciones" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_formato"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_height="match_parent"
                android:text="@string/txt_formato"
                android:layout_weight="1"
                android:textSize="12sp"
                android:onClick="irAClasificacionFormato"/>

            <Button
                android:id="@+id/btn_formato_flujo"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_height="match_parent"
                android:text="@string/txt_tipo_flujo"
                android:layout_weight="1"
                android:textSize="12sp"
                android:onClick="irAClasificacionTipoFlujo"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_medio_transmision"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_medio_transmision"
                android:textSize="12sp"
                android:onClick="irAClasificacionMedioTransmision"/>

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_tam"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_height="match_parent"
                android:text="@string/txt_tam"
                android:textSize="12sp"
                android:onClick="irAClasificacionTamanio"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_topologia"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/txt_topologia"
                android:textSize="12sp"
                android:onClick="irAClasificacionTopologia"/>

            <Button
                android:id="@+id/btn_modo_transmision"
                android:layout_width="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/txt_modo_transmision"
                android:textSize="12sp"
                android:onClick="irAClasificacionModoTransmision"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>